Add metadata mode configuration and update related documentation

--- a/config.mp3.example.json
+++ b/config.mp3.example.json
@@ -4,5 +4,6 @@
   "port": 5000,
   "bitrate": 128,
   "chunk_size": 4096,
-  "output_format": "mp3"
+  "output_format": "mp3",
+  "metadata_mode": "forced"
 }
