--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "port": 5000,
   "bitrate": 128,
   "chunk_size": 4096,
-  "output_format": "aac"
+  "output_format": "aac",
+  "metadata_mode": "auto"
 }
